--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "axios": "^0.21.1",
     "better-scroll": "^2.2.1",
+    "date-fns": "^2.19.0",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.1.0",
+    "moment": "^2.29.1",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
     "swiper": "^6.4.15",
     "vue": "^2.5.2",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
